<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:gravity="center"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:height="40dp"
            android:fontFamily="cursive"
            android:letterSpacing="0.3"
            android:text="Check Lucky Number"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:layout_marginStart="10dp"
            android:id="@+id/aries"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/aries"
            android:contentDescription="@string/aries"
            android:layout_margin="10dp"
            android:onClick="aries"
            android:clickable="true"
            />

        <ImageButton
            android:id="@+id/taurus"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/taurus"
            android:contentDescription="@string/taurus"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="taurus"
            android:clickable="true"
            />


        <ImageButton
            android:layout_marginEnd="10dp"
            android:id="@+id/gemini"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/gemini"
            android:contentDescription="@string/gemini"
            android:layout_margin="10dp"
            android:onClick="gemini"
            android:clickable="true"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageButton
            android:layout_marginStart="10dp"
            android:id="@+id/cancer"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/cancer"
            android:contentDescription="@string/cancer"
            android:layout_margin="10dp"
            android:onClick="cancer"
            android:clickable="true"
            />

        <ImageButton
            android:id="@+id/leo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/leo"
            android:contentDescription="@string/leo"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="leo"
            android:clickable="true"
            />


        <ImageButton
            android:layout_marginEnd="10dp"
            android:id="@+id/virgo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/virgo"
            android:contentDescription="@string/virgo"
            android:layout_margin="10dp"
            android:onClick="virgo"
            android:clickable="true"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageButton
            android:layout_marginStart="10dp"
            android:id="@+id/libra"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/libra"
            android:contentDescription="@string/libra"
            android:layout_margin="10dp"
            android:onClick="libra"
            android:clickable="true"
            />

        <ImageButton
            android:id="@+id/scorpio"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/scorpio"
            android:contentDescription="@string/scorpio"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="scorpio"
            android:clickable="true"
            />


        <ImageButton
            android:layout_marginEnd="10dp"
            android:id="@+id/sagittarius"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/sagittarius"
            android:contentDescription="@string/sagittarius"
            android:layout_margin="10dp"
            android:onClick="sagittarius"
            android:clickable="true"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageButton
            android:layout_marginStart="10dp"
            android:id="@+id/capricorn"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/capricorn"
            android:contentDescription="@string/capricorn"
            android:layout_margin="10dp"
            android:onClick="capricorn"
            android:clickable="true"
            />

        <ImageButton
            android:id="@+id/aquarius"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/aquarius"
            android:contentDescription="@string/aquarius"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="aquarius"
            android:clickable="true"
            />


        <ImageButton
            android:layout_marginEnd="10dp"
            android:id="@+id/pisces"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/pisces"
            android:contentDescription="@string/pisces"
            android:layout_margin="10dp"
            android:onClick="pisces"
            android:clickable="true"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:height="30dp"
            android:fontFamily="sans-serif"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="Copyrights Reserved by Group1 MAD@string/copy"
            android:textAlignment="center"
            android:letterSpacing="0"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:id="@+id/copy"
            android:clickable="true"
            />

    </LinearLayout>
</LinearLayout>